<resources>
    <!--Title Page-->
    <string name="app_name">MTG Card Scanner</string>
    <string name="app_title">MTG Card Scanner</string>
    <string name="app_description">Magic: The Gathering Card Scanner/Translator - Scan and translate MTG cards in foreign languages</string>
    <string name="scan_card_button">Scan Card</string>
    <string name="translation_button">Translate Card</string>
    <string name="view_card_details_button">Search/View Card Details</string>
    <string name="team_members_title">Team Members:</string>

    <!--Repository-->
    <string name="search_mtg_cards_title">Search MTG Cards</string>
    <string name="search_card_hint">Enter card name (e.g., \'Knight\')</string>
    <string name="search_card_button">Search Card</string>

    <!--Scanner Page-->
    <string name="scannerButtonText">Scan Again</string>
    <string name="translate_card_button">Translate This Card</string>
    <string name="returnToMenu">Return to Menu</string>
    <string name="details">Details…</string>
    <string name="mtg_card_scanner">Scan MTG Cards</string>

    <!--Translate Page-->
    <string name="translationText">Translation</string>
    <string name="TranslateAppearHereText">Translation will appear here…</string>
    <string name="TranslatebtnText">Translate Card</string>
    <string name="diffCardBtnText">Select Different Card</string>
    <string name="OGCardText">Translate MTG Cards</string>
    <string name="image_of_scanned_card">Image of Scanned Card</string>
    <string-array name="languages">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>
</resources>